--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -132,6 +132,10 @@
         <servlet-name>rotas_googlemaps</servlet-name>
         <jsp-file>/rotas_googlemaps.jsp</jsp-file>
     </servlet>
+    <servlet>
+        <servlet-name>jsonServlet</servlet-name>
+        <servlet-class>Controle.jsonServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Controle</servlet-name>
         <url-pattern>/Controle</url-pattern>
@@ -263,6 +267,10 @@
     <servlet-mapping>
         <servlet-name>rotas_googlemaps</servlet-name>
         <url-pattern>/rotas_googlemaps</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>jsonServlet</servlet-name>
+        <url-pattern>/jsonServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>60</session-timeout>
