--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
-file.reference.okhttp-2.5.0.jar=okhttp-2.5.0.jar
-file.reference.okio-1.11.0.jar=okio-1.11.0.jar
+file.reference.joda-time-2.9.9.jar=joda-time-2.9.9.jar
+file.reference.okhttp-3.6.0.jar=okhttp-3.6.0.jar
+file.reference.okio-1.12.0.jar=okio-1.12.0.jar
 j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/mysql-connector-java-5.1.23-bin.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 #Wed Feb 22 17:41:17 BRT 2017
 javadoc.splitindex=true
@@ -58,10 +59,10 @@ javac.classpath=\
     ${libs.groovy-all.classpath}:\
     ${file.reference.gson-2.8.0.jar}:\
     ${file.reference.google-maps-services-0.1.17.jar}:\
-    ${file.reference.joda-time-2.1.jar}:\
-    ${file.reference.okhttp-2.5.0.jar}:\
-    ${file.reference.okio-1.11.0.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.joda-time-2.9.9.jar}:\
+    ${file.reference.okhttp-3.6.0.jar}:\
+    ${file.reference.okio-1.12.0.jar}
 javadoc.noindex=false
 webinf.dir=web/WEB-INF
 annotation.processing.enabled.in.editor=true
@@ -80,7 +81,6 @@ conf.dir=${source.root}/conf
 annotation.processing.run.all.processors=true
 compile.jsps=false
 excludes=
-file.reference.joda-time-2.1.jar=joda-time-2.1.jar
 javac.processorpath=\
     ${javac.classpath}
 build.test.results.dir=${build.dir}/test/results
