--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -136,6 +136,10 @@
         <servlet-name>rota_pedidos</servlet-name>
         <jsp-file>/rota_pedidos.jsp</jsp-file>
     </servlet>
+    <servlet>
+        <servlet-name>jsonServleti</servlet-name>
+        <servlet-class>Controle.jsonServleti</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Controle</servlet-name>
         <url-pattern>/Controle</url-pattern>
@@ -271,6 +275,10 @@
     <servlet-mapping>
         <servlet-name>rota_pedidos</servlet-name>
         <url-pattern>/rota_pedidos</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>jsonServleti</servlet-name>
+        <url-pattern>/jsonServleti</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>60</session-timeout>
