Tentativa de chart1

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -140,6 +140,10 @@
         <servlet-name>jsonServleti</servlet-name>
         <servlet-class>Controle.jsonServleti</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>jsonServleti2</servlet-name>
+        <servlet-class>Controle.jsonServleti2</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Controle</servlet-name>
         <url-pattern>/Controle</url-pattern>
@@ -279,6 +283,10 @@
     <servlet-mapping>
         <servlet-name>jsonServleti</servlet-name>
         <url-pattern>/jsonServleti</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>jsonServleti2</servlet-name>
+        <url-pattern>/jsonServleti2</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>60</session-timeout>
