--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -140,6 +140,14 @@
         <servlet-name>ServletIndex</servlet-name>
         <servlet-class>Controle.ServletIndex</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>call</servlet-name>
+        <jsp-file>/call.jsp</jsp-file>
+    </servlet>
+    <servlet>
+        <servlet-name>teste</servlet-name>
+        <jsp-file>/teste.jsp</jsp-file>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Controle</servlet-name>
         <url-pattern>/Controle</url-pattern>
@@ -279,6 +287,14 @@
     <servlet-mapping>
         <servlet-name>ServletIndex</servlet-name>
         <url-pattern>/ServletIndex</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>call</servlet-name>
+        <url-pattern>/call</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>teste</servlet-name>
+        <url-pattern>/teste</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>60</session-timeout>
